# vectorspace

./: README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
vectorspace/: app.py  chunking.py  core.py  http_server.py  logger.py  mcp_server.py
