[project]
name = "python-vectorspace"
version = "0.0.5"
authors = [
  { name="deathbeam", email="slusnucky@gmail.com" },
]
description = "Directory file watcher for automatically creating and querying vector embeddings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.16",
    "fastapi>=0.115.11",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/deathbeam/vectorspace"
Issues = "https://github.com/deathbeam/vectorspace/issues"

[project.scripts]
vectorspace = "vectorspace.app:main"

[tool.uv]
package = true

[tool.setuptools]
license-files = []
