[project]
name = "python-vectorspace"
version = "0.0.6"
authors = [
  { name="deathbeam", email="slusnucky@gmail.com" },
]
description = "Directory file watcher for automatically creating and querying vector embeddings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.16",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.0",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/deathbeam/vectorspace"
Issues = "https://github.com/deathbeam/vectorspace/issues"

[project.scripts]
vectorspace = "vectorspace.http_server:main"
vectorspace-mcp = "vectorspace.mcp_server:main"

[tool.uv]
package = true

[tool.setuptools]
license-files = []
