[project]
name = "python-vectorspace"
version = "0.0.7"
authors = [
  { name="deathbeam", email="slusnucky@gmail.com" },
]
description = "Directory file watcher for automatically creating and querying vector embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.16",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.0",
    "pygments>=2.19.1",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack>=0.9.0",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/deathbeam/vectorspace"
Issues = "https://github.com/deathbeam/vectorspace/issues"

[project.scripts]
vectorspace = "vectorspace.http_server:main"
vectorspace-mcp = "vectorspace.mcp_server:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.setuptools]
license-files = []
